formatting everything
Signed-off-by: Josh Long <54473+joshlong@users.noreply.github.com>